--- a/DnD_Original D&D/DnD_OD&D.html
+++ b/DnD_Original D&D/DnD_OD&D.html
@@ -113,7 +113,7 @@
         </span>
       </div>
       <div class="sheet-row">
-        <span class="sheet-col sheet-full misc"><label>Misc.:</label><textarea class="sheet-fill" name="attr_Misc" title="@{Miscellaneous}"  value=""></textarea></span>
+        <span class="sheet-col sheet-full misc"><label>Misc.:</label><textarea class="sheet-fill" name="attr_Misc" title="@{Miscellaneous}"  ></textarea></span>
       </div>
     </div> <!-- END sheet-section lanuages-saves-misc -->
 
@@ -121,17 +121,17 @@
 
       <div class="sheet-section equipment grid-item grid-item1">
         <div class="sheet-label">Equipment</div>
-        <textarea class="sheet-textarea-fill" name="attr_Equipment" title="@{Equipment}"  value=""></textarea>
+        <textarea class="sheet-textarea-fill" name="attr_Equipment" title="@{Equipment}"  ></textarea>
       </div> <!-- END sheet-section equipment -->
 
       <div class="sheet-section treasure grid-item grid-item2">
         <div class="sheet-label">Treasure</div>
-        <textarea class="sheet-textarea-fill" name="attr_Treasure" title="@{Treasure}"  value=""></textarea>
+        <textarea class="sheet-textarea-fill" name="attr_Treasure" title="@{Treasure}"  ></textarea>
       </div> <!-- END sheet-section treasure -->
 
       <div class="sheet-section spells-magic grid-item grid-item3">
         <div class="sheet-label">Spells/Magic</div>
-        <textarea class="sheet-textarea-fill" name="attr_SpellsMagic" title="@{SpellsMagic}" value=""></textarea>
+        <textarea class="sheet-textarea-fill" name="attr_SpellsMagic" title="@{SpellsMagic}" ></textarea>
       </div> <!-- END sheet-section spells-magic -->
 
       <!-- <div class="sheet-section grid-item grid-item4"></div> -->
@@ -157,7 +157,7 @@
 
       <div class="sheet-section encumbrance grid-item grid-item6">
         <div class="sheet-label sheet-fill">Encumbrance</div>
-        <textarea class="sheet-textarea-fill" name="attr_Encumbrance" title="@{Encumbrance}" value=""></textarea>
+        <textarea class="sheet-textarea-fill" name="attr_Encumbrance" title="@{Encumbrance}" ></textarea>
       </div> <!-- END sheet-section encumbrance -->
 
       <!-- <div class="sheet-section grid-item grid-item7"></div> -->
