Positively the last last minute changes

--- a/Torg Eternity/Torg Eternity.html
+++ b/Torg Eternity/Torg Eternity.html
@@ -1545,6 +1545,31 @@
             <div class="template-row"><span class="template-subtitle">{{what}}</span></div>
             {{#why}}<div class="template-row right"><span class="template-subtitle right"> ({{why}})</span></div>{{/why}}
             {{#casting}}
+            <div class="template-row arrow-container"><div class="arrow-right"></div></div>
+            {{/casting}}
+            {{#^casting}}
+                {{#range}}
+            <div class="template-row arrow-container"><div class="arrow-right"></div></div>
+                {{/range}}
+            {{/^casting}}
+            {{#^casting}}
+                {{#^range}}
+                    {{#duration}}
+            <div class="template-row arrow-container"><div class="arrow-right"></div></div>
+                    {{/duration}}
+                {{/^range}}
+            {{/^casting}}
+            {{#^casting}}
+                {{#^range}}
+                    {{#^duration}}
+                        {{#target}}
+            <div class="template-row arrow-container"><div class="arrow-right"></div></div>
+                        {{/target}}
+                    {{/^duration}}
+                {{/^range}}
+            {{/^casting}}
+            
+            {{#casting}}
                 <div class="template-row"><span class="template-label">Casting Time: </span><span class="template-value">{{casting}}</span></div>
             {{/casting}}
             {{#range}}
@@ -3353,7 +3378,7 @@
                 {{buttons}}
                 </div>
             {{/buttons}}
-            {{#allprops() who what why defense stymied wounded modifier score value torgroll lastroll buttons note}}
+            {{#allprops() who what why defense stymied wounded modifier score value torgroll lastroll buttons note casting range duration target}}
 
             <div class="template-row template-extras">
                 <span class="template-label">
@@ -3363,7 +3388,7 @@
                     {{value}}
                 </span>
             </div>
-            {{/allprops() who what why defense stymied wounded modifier score value torgroll lastroll buttons note}}
+            {{/allprops() who what why defense stymied wounded modifier score value torgroll lastroll buttons note casting range duration target}}
             {{#note}}
             <div class="template-row arrow-container"><div class="arrow-right"></div></div>
                 <div class="template-row">
