fix some issus for API compatibilities

--- a/Cyberpunk2k20_v2/Cyberpunk2k20.html
+++ b/Cyberpunk2k20_v2/Cyberpunk2k20.html
@@ -1,6 +1,5 @@
 <div class="body">
     <div>
-
         <input type="hidden" name="attr_ref_penality" value="0">
         <input type="hidden" name="attr_int_penality" value="0">
         <input type="hidden" name="attr_tech_penality" value="0">
@@ -2120,9 +2119,9 @@
             <div class="weapons panel">
                 <input type="checkbox" class="edit-wp" name="attr_edit-wp"/>
                 <h5 style="margin:0;">Weapons list
-                    <button type="roll" value="!selecta @{selected|token_id}">Reload</button>
-                    <button type="roll" value="!show @{selected|token_id}">Show</button> <button type="roll" value="!damage @{selected|token_id} 0 0 0 0 @{meleedmg} @{loc} ?{AP|Normal,1/1|SP/2,2|SP/3,3|SP/4,4} 0 ?{nb hits|1}">Damage</button>
-                    <button type="roll" value="!test @{selected|token_id} @{target|token_id} @{nb_dice} @{type_dice} @{add_dmg} @{meleedmg} @{loc} ?{AP|Normal,1/1|SP/2,2|SP/3,3|SP/4,4} ?{Damage|x1,*v1|÷2,/v2|x2,*v2} ?{nb hits|1}">Damages (Target)</button>
+                    <button type="roll" value="!wp-reload @{selected|token_id}">Reload</button>
+                    <button type="roll" value="!wp-show @{selected|token_id}">Show</button> <button type="roll" value="!wp-damage @{selected|token_id} 0 0 0 0 @{meleedmg} @{loc} ?{AP|Normal,1/1|SP/2,2|SP/3,3|SP/4,4} 0 ?{nb hits|1}">Damage</button>
+                    <button type="roll" value="!wp-damage @{selected|token_id} @{target|token_id} @{nb_dice} @{type_dice} @{add_dmg} @{meleedmg} @{loc} ?{AP|Normal,1/1|SP/2,2|SP/3,3|SP/4,4} ?{Damage|x1,*v1|÷2,/v2|x2,*v2} ?{nb hits|1}">Damages (Target)</button>
                 </h5>
                 <ul class="wp-stat">
                     <fieldset class="repeating_wp">
@@ -2175,8 +2174,8 @@
                             <input style="width:80px" type="number" name="attr_ammu-nb" />
                             <input style="width:300px" type="text" name="attr_ammu-desc" placeholder="Special..."/>
                         </li>
-                    </fieldset>
                 </ul>
+                </fieldset>
             </div>
             <div class="armors panel">
                 <br>
