--- a/Descent into Midnight/DescentIntoMIdnight.html
+++ b/Descent into Midnight/DescentIntoMIdnight.html
@@ -1,168 +1,133 @@
 <div class="sheet-header sheet-topbar">
     <input class="sheet-field-name" type="text" placeholder="Name" name="attr_character_name">
-	<input class="sheet-field-class" type="text" placeholder="Class" name="attr_class">
+	<input class="sheet-field-class" type="text" placeholder="Playbook" name="attr_playbook">
 </div>
 
 <div class="sheet-statistics">
 	<div class="sheet-header">
-		<div class="sheet-section-name">Damage</div>
-		<button type='roll' name='roll_RollDamage' value='/me rolls [[1@{dtype}]] damage.'></button>
-		<input type="text" name="attr_dtype">
+		<div class="sheet-section-name">Pronouns</div>
+		<input type="text" placeholder="They/Their/Them" name="attr_pronouns">
 	</div>
 	<div class="sheet-header">
-		<div class="sheet-section-name">Armor</div>
-		<input type="number" name="attr_armor">
-	</div>
-	<div class="sheet-header">
-		<div class="sheet-section-name">Level</div>
-		<input type="number" name="attr_level">
-	</div>
-	<div class="sheet-header">
-		<div class="sheet-section-name">XP</div>
-		<input type="number" name="attr_xp_max" value="@{level}+7" disabled="true">
+		<div class="sheet-section-name">Harmony</div>
+		<input type="number" name="attr_harmony_max" value="5" disabled="true">
 		<span>/</span>	
-		<input type="number" name="attr_xp">
+		<input type="number" name="attr_harmony">
 	</div>
 	<div class="sheet-header">
-		<input type="checkbox" class="sheet-toggle sheet-left" title="show/hide" name="attr_hp-show" />
-
-		<div class="sheet-section-name sheet-show">HP</div>
-		<input class="sheet-show" type="number" name="attr_hp_max" value="@{basehp} + @{constitution}" disabled="true">
-		<span class="sheet-show">/</span>	
-		<input class="sheet-show" type="number" name="attr_hp">
-		
-		<div class="sheet-section-name sheet-hide">Base HP</div>
-		<input class="sheet-hide" type="number" name="attr_basehp" placeholder="Base">
+		<div class="sheet-section-name">Corruption</div>
+		<input type="number" name="attr_corruption_max" value="5" disabled="true">
+		<span>/</span>	
+		<input type="number" name="attr_corruption">
 	</div>
 	<div class="sheet-clearfix"></div>
 </div>
 
 <div class="sheet-attributes">
 	<div class="sheet-header">
-		<label class="sheet-top" for="attr_strength">Strength</label>
+		<label class="sheet-top" for="attr_hope">Hope</label>
 
 		<div class="sheet-row-1">
-			<input type="number" name="attr_strength">
+			<input type="number" name="attr_hope">
 		</div>
 
 		<div class="sheet-row-2">
 			<label>
-				<input type="checkbox" name="attr_weak" value="1">
-				<span> weak -1</span>
+				<input type="checkbox" name="attr_despairing" value="2">
+				<span>despairing -2</span>
 			</label>
 		</div>
 
 		<div class="sheet-row-3">
-			<input type="number" name="attr_strmod" value="round(0.00072*(@{strength}*@{strength}*@{strength}) - 0.025*(@{strength}*@{strength}) + 0.6 * @{strength} - 4.35) - @{weak}" disabled="true">
-			<button type="roll" name="roll_TestStrength" value="/me rolls [[2d6 + @{strmod}]] on STR."></button>
+			<input type="number" name="attr_strmod" value="round(0.00072*(@{hope}*@{hope}*@{hope}) - 0.025*(@{hope}*@{hope}) + 0.6 * @{hope} - 4.35) - @{despairing}" disabled="true">
+			<button type="roll" name="roll_TestHope" value="/me rolls [[2d6 + @{strmod}]] on STR."></button>
 		</div>
 
 		<label class="sheet-bottom" for="attr_strmod">STR</label>
 	</div>
 	<div class="sheet-header">
-		<label class="sheet-top" for="attr_dexterity">Dexterity</label>
+		<label class="sheet-top" for="attr_altruism">Altruism</label>
 
 		<div class="sheet-row-1">
-			<input type="number" name="attr_dexterity">
+			<input type="number" name="attr_altruism">
 		</div>
 
 		<div class="sheet-row-2">
 			<label>
-				<input type="checkbox" name="attr_shaky" value="1">
-				<span> shaky -1</span>
+				<input type="checkbox" name="attr_selfish" value="2">
+				<span>selfish -2</span>
 			</label>
 		</div>
 
 		<div class="sheet-row-3">
-			<input type="number" name="attr_dexmod" value="round(0.00072*(@{dexterity}*@{dexterity}*@{dexterity}) - 0.025*(@{dexterity}*@{dexterity}) + 0.6 * @{dexterity} - 4.35) - @{shaky}" disabled="true">
-			<button type="roll" name="roll_TestDexterity" value="/me rolls [[2d6 + @{dexmod}]] on DEX."></button>
+			<input type="number" name="attr_dexmod" value="round(0.00072*(@{altruism}*@{altruism}*@{altruism}) - 0.025*(@{altruism}*@{altruism}) + 0.6 * @{altruism} - 4.35) - @{selfish}" disabled="true">
+			<button type="roll" name="roll_TestAltruism" value="/me rolls [[2d6 + @{dexmod}]] on DEX."></button>
 		</div>
 
 		<label class="sheet-bottom" for="attr_dexmod">DEX</label>
 	</div>
 	<div class="sheet-header">
-		<label class="sheet-top" for="attr_constitution">Constitution</label>
+		<label class="sheet-top" for="attr_community">Community</label>
 
 		<div class="sheet-row-1">
-			<input type="number" name="attr_constitution">
+			<input type="number" name="attr_community">
 		</div>
 
 		<div class="sheet-row-2">
 			<label>
-				<input type="checkbox" name="attr_sick" value="1">
-				<span> sick -1</span>
+				<input type="checkbox" name="attr_isolated" value="2">
+				<span>isolated -2</span>
 			</label>
 		</div>
 
 		<div class="sheet-row-3">
-			<input type="number" name="attr_conmod" value="round(0.00072*(@{constitution}*@{constitution}*@{constitution}) - 0.025*(@{constitution}*@{constitution}) + 0.6 * @{constitution} - 4.35) - @{sick}" disabled="true">
-			<button type="roll" name="roll_TestConstitution" value="/me rolls [[2d6 + @{conmod}]] on CON."></button>
+			<input type="number" name="attr_conmod" value="round(0.00072*(@{community}*@{community}*@{community}) - 0.025*(@{community}*@{community}) + 0.6 * @{community} - 4.35) - @{isolated}" disabled="true">
+			<button type="roll" name="roll_TestCommunity" value="/me rolls [[2d6 + @{conmod}]] on CON."></button>
 		</div>
 
 		<label class="sheet-bottom" for="attr_conmod">CON</label>
 	</div>
 	<div class="sheet-header">
-		<label class="sheet-top" for="attr_intelligence">Intelligence</label>
+		<label class="sheet-top" for="attr_calm">Calm</label>
 
 		<div class="sheet-row-1">
-			<input type="number" name="attr_intelligence">
+			<input type="number" name="attr_calm">
 		</div>
 
 		<div class="sheet-row-2">
 			<label>
-				<input type="checkbox" name="attr_stunned" value="1">
-				<span> stunned -1</span>
+				<input type="checkbox" name="attr_angry" value="2">
+				<span>angry -2</span>
 			</label>
 		</div>
 
 		<div class="sheet-row-3">
-			<input type="number" name="attr_intmod" value="round(0.00072*(@{intelligence}*@{intelligence}*@{intelligence}) - 0.025*(@{intelligence}*@{intelligence}) + 0.6 * @{intelligence} - 4.35) - @{stunned}" disabled="true">
-			<button type="roll" name="roll_TestIntelligence" value="/me rolls [[2d6 + @{intmod}]] on INT."></button>
+			<input type="number" name="attr_intmod" value="round(0.00072*(@{calm}*@{calm}*@{calm}) - 0.025*(@{calm}*@{calm}) + 0.6 * @{calm} - 4.35) - @{angry}" disabled="true">
+			<button type="roll" name="roll_TestCalm" value="/me rolls [[2d6 + @{intmod}]] on INT."></button>
 		</div>
 
 		<label class="sheet-bottom" for="attr_intmod">INT</label>
 	</div>
 	<div class="sheet-header">
-		<label class="sheet-top" for="attr_wisdom">Wisdom</label>
+		<label class="sheet-top" for="attr_drive">Drive</label>
 
 		<div class="sheet-row-1">
-			<input type="number" name="attr_wisdom">
+			<input type="number" name="attr_drive">
 		</div>
 
 		<div class="sheet-row-2">
 			<label>
-				<input type="checkbox" name="attr_confused" value="1">
-				<span> confused -1</span>
+				<input type="checkbox" name="attr_conflicted" value="2">
+				<span>conflicted -2</span>
 			</label>
 		</div>
 
 		<div class="sheet-row-3">
-			<input type="number" name="attr_wismod" value="round(0.00072*(@{wisdom}*@{wisdom}*@{wisdom}) - 0.025*(@{wisdom}*@{wisdom}) + 0.6 * @{wisdom} - 4.35) - @{confused}" disabled="true">
-			<button type="roll" name="roll_TestWisdom" value="/me rolls [[2d6 + @{wismod}]] on WIS."></button>
+			<input type="number" name="attr_wismod" value="round(0.00072*(@{drive}*@{drive}*@{drive}) - 0.025*(@{drive}*@{drive}) + 0.6 * @{drive} - 4.35) - @{conflicted}" disabled="true">
+			<button type="roll" name="roll_TestDrive" value="/me rolls [[2d6 + @{wismod}]] on WIS."></button>
 		</div>
 
 		<label class="sheet-bottom" for="attr_wismod">WIS</label>
-	</div>
-	<div class="sheet-header">
-		<label class="sheet-top" for="attr_charisma">Charisma</label>
-
-		<div class="sheet-row-1">
-			<input type="number" name="attr_charisma">
-		</div>
-
-		<div class="sheet-row-2">
-			<label>
-				<input type="checkbox" name="attr_scarred" value="1">
-				<span> scarred -1</span>
-			</label>
-		</div>
-
-		<div class="sheet-row-3">
-			<input type="number" name="attr_chamod" value="round(0.00072*(@{charisma}*@{charisma}*@{charisma}) - 0.025*(@{charisma}*@{charisma}) + 0.6 * @{charisma} - 4.35) - @{scarred}" disabled="true">
-			<button type="roll" name="roll_TestCharisma" value="/me rolls [[2d6 + @{chamod}]] on CHA."></button>
-		</div>
-
-		<label class="sheet-bottom" for="attr_chamod">CHA</label>
 	</div>
 	<div class="sheet-clearfix"></div>
 </div>
@@ -188,12 +153,12 @@
 		<textarea name="attr_race_bonus" placeholder="Move"></textarea>
 	</div>
 
-	<!-- ===== BONDS ===== -->
+	<!-- ===== Links ===== -->
 	<div class="sheet-header">
-		<div class="sheet-section-name">Bonds</div>
+		<div class="sheet-section-name">Links</div>
 	</div>
-	<div class="sheet-section-bonds">
-		<fieldset class="repeating_bonds">
+	<div class="sheet-section-links">
+		<fieldset class="repeating_links">
 			<textarea placeholder="Empty Bond" name="attr_bond"></textarea>
 			<div class="sheet-clearfix"></div>
 		</fieldset>
