--- a/Descent into Midnight/DescentIntoMIdnight.html
+++ b/Descent into Midnight/DescentIntoMIdnight.html
@@ -12,23 +12,23 @@
 		<div class="sheet-section-name">Harmony</div>
 		<input type="number" name="attr_harmony_max" value="5" disabled="true">
 		<span>/</span>	
-		<input type="number" name="attr_harmony">
+		<input type="number" name="attr_harmony" value=0>
 	</div>
 	<div class="sheet-header">
 		<div class="sheet-section-name">Corruption</div>
 		<input type="number" name="attr_corruption_max" value="5" disabled="true">
 		<span>/</span>	
-		<input type="number" name="attr_corruption">
+		<input type="number" name="attr_corruption" value=0>
 	</div>
 	<div class="sheet-clearfix"></div>
 </div>
 
 <div class="sheet-attributes">
 	<div class="sheet-header">
-		<label class="sheet-top" for="attr_hope">Hope</label>
+		<button type="roll" name="roll_TestHope" value="/me rolls [[2d6 + @{hope} - @{despairing}]] for Hope.">Hope</button>
 
 		<div class="sheet-row-1">
-			<input type="number" name="attr_hope">
+			<input type="number" name="attr_hope" value=0>
 		</div>
 
 		<div class="sheet-row-2">
@@ -37,19 +37,12 @@
 				<span>despairing -2</span>
 			</label>
 		</div>
-
-		<div class="sheet-row-3">
-			<input type="number" name="attr_strmod" value="round(0.00072*(@{hope}*@{hope}*@{hope}) - 0.025*(@{hope}*@{hope}) + 0.6 * @{hope} - 4.35) - @{despairing}" disabled="true">
-			<button type="roll" name="roll_TestHope" value="/me rolls [[2d6 + @{strmod}]] on STR."></button>
-		</div>
-
-		<label class="sheet-bottom" for="attr_strmod">STR</label>
 	</div>
 	<div class="sheet-header">
-		<label class="sheet-top" for="attr_altruism">Altruism</label>
+		<button type="roll" name="roll_TestAltruism" value="/me rolls [[2d6 + @{altruism} - @{selfish}]] for Altruism.">Altruism</button>
 
 		<div class="sheet-row-1">
-			<input type="number" name="attr_altruism">
+			<input type="number" name="attr_altruism" value=0>
 		</div>
 
 		<div class="sheet-row-2">
@@ -58,19 +51,12 @@
 				<span>selfish -2</span>
 			</label>
 		</div>
-
-		<div class="sheet-row-3">
-			<input type="number" name="attr_dexmod" value="round(0.00072*(@{altruism}*@{altruism}*@{altruism}) - 0.025*(@{altruism}*@{altruism}) + 0.6 * @{altruism} - 4.35) - @{selfish}" disabled="true">
-			<button type="roll" name="roll_TestAltruism" value="/me rolls [[2d6 + @{dexmod}]] on DEX."></button>
-		</div>
-
-		<label class="sheet-bottom" for="attr_dexmod">DEX</label>
 	</div>
 	<div class="sheet-header">
-		<label class="sheet-top" for="attr_community">Community</label>
+		<button type="roll" name="roll_TestCommunity" value="/me rolls [[2d6 + @{community} - @{isolated}]] for Community.">Community</button>
 
 		<div class="sheet-row-1">
-			<input type="number" name="attr_community">
+			<input type="number" name="attr_community" value=0>
 		</div>
 
 		<div class="sheet-row-2">
@@ -79,19 +65,12 @@
 				<span>isolated -2</span>
 			</label>
 		</div>
-
-		<div class="sheet-row-3">
-			<input type="number" name="attr_conmod" value="round(0.00072*(@{community}*@{community}*@{community}) - 0.025*(@{community}*@{community}) + 0.6 * @{community} - 4.35) - @{isolated}" disabled="true">
-			<button type="roll" name="roll_TestCommunity" value="/me rolls [[2d6 + @{conmod}]] on CON."></button>
-		</div>
-
-		<label class="sheet-bottom" for="attr_conmod">CON</label>
 	</div>
 	<div class="sheet-header">
-		<label class="sheet-top" for="attr_calm">Calm</label>
+		<button type="roll" name="roll_TestCalm" value="/me rolls [[2d6 + @{calm} - @{angry}]] for Calm.">Calm</button>
 
 		<div class="sheet-row-1">
-			<input type="number" name="attr_calm">
+			<input type="number" name="attr_calm" value=0>
 		</div>
 
 		<div class="sheet-row-2">
@@ -100,19 +79,12 @@
 				<span>angry -2</span>
 			</label>
 		</div>
-
-		<div class="sheet-row-3">
-			<input type="number" name="attr_intmod" value="round(0.00072*(@{calm}*@{calm}*@{calm}) - 0.025*(@{calm}*@{calm}) + 0.6 * @{calm} - 4.35) - @{angry}" disabled="true">
-			<button type="roll" name="roll_TestCalm" value="/me rolls [[2d6 + @{intmod}]] on INT."></button>
-		</div>
-
-		<label class="sheet-bottom" for="attr_intmod">INT</label>
 	</div>
 	<div class="sheet-header">
-		<label class="sheet-top" for="attr_drive">Drive</label>
+		<button type="roll" name="roll_TestDrive" value="/me rolls [[2d6 + @{drive} - @{conflicted}]] for Drive.">Drive</button>
 
 		<div class="sheet-row-1">
-			<input type="number" name="attr_drive">
+			<input type="number" name="attr_drive" value=0>
 		</div>
 
 		<div class="sheet-row-2">
@@ -121,13 +93,6 @@
 				<span>conflicted -2</span>
 			</label>
 		</div>
-
-		<div class="sheet-row-3">
-			<input type="number" name="attr_wismod" value="round(0.00072*(@{drive}*@{drive}*@{drive}) - 0.025*(@{drive}*@{drive}) + 0.6 * @{drive} - 4.35) - @{conflicted}" disabled="true">
-			<button type="roll" name="roll_TestDrive" value="/me rolls [[2d6 + @{wismod}]] on WIS."></button>
-		</div>
-
-		<label class="sheet-bottom" for="attr_wismod">WIS</label>
 	</div>
 	<div class="sheet-clearfix"></div>
 </div>
