--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -4207,26 +4207,30 @@ const fourpointone = () => {
     })
   })
 
-  ['range', 'melee'].forEach(weaponType => {
-    getSectionIDs(weaponType, idarray => {
-      let attributes = [];
-      let update = {};
-
-      idarray.forEach(id => attributes.push(`repeating_${weaponType}_${id}_spec`))
-
-      getAttrs(attributes, value => {
-        idarray.forEach(id => update[`repeating_${weaponType}_${id}_specialization`] = value[`repeating_${weaponType}_${id}_spec`])
-        setAttrs(update);
-      });
+  getSectionIDs('range', idarray => {
+    let attributes = [];
+    let update = {};
+    idarray.forEach(id => attributes.push(`repeating_range_${id}_spec`))
+    getAttrs(attributes, value => {
+      idarray.forEach(id => update[`repeating_range_${id}_specialization`] = value[`repeating_range_${id}_spec`])
+      setAttrs(update);
     });
-  })
+  });
+
+  getSectionIDs('melee', idarray => {
+    let attributes = [];
+    let update = {};
+    idarray.forEach(id => attributes.push(`repeating_melee_${id}_spec`))
+    getAttrs(attributes, value => {
+      idarray.forEach(id => update[`repeating_melee_${id}_specialization`] = value[`repeating_melee_${id}_spec`])
+      setAttrs(update);
+    });
+  });
 
   getSectionIDs("active", idarray => {
     let attributes = [];
     let update = {};
-
     idarray.forEach(id => attributes.push(`repeating_active_${id}_skill`))
-
     getAttrs(attributes, value => {
         idarray.forEach(id => update[`repeating_active_${id}_display_skill`] = value[`repeating_active_${id}_skill`])
        setAttrs(update);
