--- a/Descent into Midnight/DescentIntoMIdnight.html
+++ b/Descent into Midnight/DescentIntoMIdnight.html
@@ -4,21 +4,23 @@
 </div>
 
 <div class="sheet-statistics">
-	<div class="sheet-header">
+	<div class="sheet-header pronoun">
 		<div class="sheet-section-name">Pronouns</div>
 		<input type="text" placeholder="They/Their/Them" name="attr_pronouns">
 	</div>
-	<div class="sheet-header">
+	<div class="sheet-header harmony">
 		<div class="sheet-section-name">Harmony</div>
-		<input type="number" name="attr_harmony_max" value="5" disabled="true">
+		<input type="checkbox" class="sheet-progression"><input type="checkbox" class="sheet-progression"><input type="checkbox" class="sheet-progression"><input type="checkbox" class="sheet-progression"><input type="checkbox" class="sheet-progression">
+		<!-- <input type="number" name="attr_harmony_max" value="5" disabled="true">
 		<span>/</span>	
-		<input type="number" name="attr_harmony" value=0>
+		<input type="number" name="attr_harmony" value=0> -->
 	</div>
-	<div class="sheet-header">
+	<div class="sheet-header corruption">
 		<div class="sheet-section-name">Corruption</div>
-		<input type="number" name="attr_corruption_max" value="5" disabled="true">
+		<input type="checkbox" class="sheet-progression"><input type="checkbox" class="sheet-progression"><input type="checkbox" class="sheet-progression"><input type="checkbox" class="sheet-progression"><input type="checkbox" class="sheet-progression">
+		<!-- <input type="number" name="attr_corruption_max" value="5" disabled="true">
 		<span>/</span>	
-		<input type="number" name="attr_corruption" value=0>
+		<input type="number" name="attr_corruption" value=0> -->
 	</div>
 	<div class="sheet-clearfix"></div>
 </div>
@@ -98,24 +100,32 @@
 </div>
 
 <div class="sheet-col-left">
-	<!-- ===== ALIGNMENT ===== -->
+	<!-- ===== Character Description ===== -->
 	<div class="sheet-header">
-		<div class="sheet-section-name">Alignment</div>
+		<div class="sheet-section-name">Character Description</div>
 	</div>
-	<div class="sheet-section-alignment">
-		<input type="text" name="attr_alignment" placeholder="Name">
+	<div class="sheet-section-look sheet-description">
+		<span class="sheet-description-name">Look</span>
 		<br>
-		<textarea name="attr_alignment_goal" placeholder="Move"></textarea>
+		<textarea name="attr_look" placeholder="Look"></textarea>
 	</div>
 
-	<!-- ===== RACE ===== -->
-	<div class="sheet-header">
-		<div class="sheet-section-name">Race</div>
-	</div>
-	<div class="sheet-section-race">
-		<input type="text" name="attr_race" placeholder="Name">
+	<div class="sheet-section-gifts sheet-description">
+		<span class="sheet-description-name">Gifts</span>
 		<br>
-		<textarea name="attr_race_bonus" placeholder="Move"></textarea>
+		<textarea name="attr_gifts" placeholder="Gifts"></textarea>
+	</div>
+
+	<div class="sheet-section-attitude sheet-description">
+		<span class="sheet-description-name">Attitude</span>
+		<br>
+		<textarea name="attr_attitude" placeholder="Attitude"></textarea>
+	</div>
+
+	<div class="sheet-section-home sheet-description">
+		<span class="sheet-description-name">Home</span>
+		<br>
+		<textarea name="attr_home" placeholder="Home"></textarea>
 	</div>
 
 	<!-- ===== Links ===== -->
@@ -130,29 +140,6 @@
 	</div>
     
 	<div class="sheet-clearfix"></div>
-
-	<!-- ===== GEAR ===== -->
-	<div class="sheet-header">
-		<div class="sheet-section-name">Gear</div>
-
-		<input type="checkbox" class="sheet-toggle" title="show/hide" name="attr_load-show" value="1">
-
-		<input class="sheet-show" type="number" name="attr_load_max" value="@{baseload} + @{strmod}" disabled="true">
-		<span class="sheet-show">/</span>
-		<input class="sheet-show" type="number" name="attr_load">
-		<span class="sheet-show sheet-section-name sheet-right">Load</span>
-
-		<input class="sheet-hide" type="number" name="attr_baseload">
-		<span class="sheet-hide sheet-section-name sheet-right">Base Load</span>
-	</div>
-	<div class="sheet-section-gear">
-		<fieldset class="repeating_items">
-			<input name="attr_itemname" type="text" placeholder="Name">
-			<input name="attr_itemtags" type="text" placeholder="Tags">
-			<input name="attr_itemweight" type="number" placeholder="Wgt" title="Weight">
-			<div class="sheet-clearfix"></div>
-		</fieldset>
-	</div>
 </div>
 
 <div class="sheet-col-right">
@@ -163,6 +150,10 @@
 	<div class="sheet-section-moves">
 		<fieldset class="repeating_moves">
 			<input type="text" name="attr_movename" placeholder="Move Name">
+			<select name="attr_movetype">
+				<option selected>Playbook</option>
+				<option>Corruption</option> 
+			</select>
 			<input type="checkbox" class="sheet-toggle" title="show/hide" name="attr_move-show" value="1" />
 			<textarea name="attr_movebody" class="sheet-hide" placeholder="Move Description"></textarea>
 		</fieldset>
