Creating advancement section

--- a/Descent into Midnight/DescentIntoMIdnight.html
+++ b/Descent into Midnight/DescentIntoMIdnight.html
@@ -164,6 +164,11 @@
 <br>
 
 <!-- ===== SPELLS ===== -->
+<div class="sheet-advancement">
+	<input type="checkbox" name=""
+</div>
+
+<!-- ===== SPELLS ===== -->
 <div class="sheet-header">
 	<div class="sheet-section-name">Spells</div>
 </div>
