Adding basic moves
Fun times for all

--- a/Descent into Midnight/DescentIntoMIdnight.html
+++ b/Descent into Midnight/DescentIntoMIdnight.html
@@ -153,6 +153,7 @@
 			<select name="attr_movetype">
 				<option selected>Playbook</option>
 				<option>Corruption</option> 
+				<option>Team</option>
 			</select>
 			<input type="checkbox" class="sheet-toggle" title="show/hide" name="attr_move-show" value="1" />
 			<textarea name="attr_movebody" class="sheet-hide" placeholder="Move Description"></textarea>
@@ -165,17 +166,79 @@
 
 <!-- ===== SPELLS ===== -->
 <div class="sheet-advancement">
-	<input type="checkbox" name=""
+	<div class="sheet-header">
+		<div class="sheet-section-name">Advancement</div>
+	</div>
+	<input type="checkbox" class="sheet-advancementcheck"> <span name="attr_advanceone">Gain another Playbook Move</span><br>
+	<input type="checkbox" class="sheet-advancementcheck"> <span name="attr_advancetwo">Gain another Playbook Move</span><br>
+	<input type="checkbox" class="sheet-advancementcheck"> <span name="attr_advancethree">Gain an additional Gift from any Playbook</span><br>
+	<input type="checkbox" class="sheet-advancementcheck"> <span name="attr_advancefour">Playbook Specific Advancement</span><br>
+	<input type="checkbox" class="sheet-advancementcheck"> <span name="attr_advancefive">Increase your Corruption Track by 1</span><br>
+	<input type="checkbox" class="sheet-advancementcheck"> <span name="attr_advancesix">Gain a Move from another Playbook</span><br>
+	<input type="checkbox" class="sheet-advancementcheck"> <span name="attr_advanceseven">Take an advancement from the Community Playboook</span><br>
+	<input type="checkbox" class="sheet-advancementcheck"> <span name="attr_advanceeight">Reflect on how recent events have changed you. Increase two stats by 1 and decrease a stat by 1.</span>
 </div>
 
-<!-- ===== SPELLS ===== -->
+<!-- ===== Move Sheet ===== -->
 <div class="sheet-header">
-	<div class="sheet-section-name">Spells</div>
+	<div class="sheet-section-name">Basic and Special Moves</div>
 </div>
-<div class="sheet-section-spells">
-	<fieldset class="repeating_spells sheet-section-spells">
-		<input type="text" name="attr_spellname" placeholder="Spell Name">
-		<input type="checkbox" class="sheet-toggle" title="show/hide" name="attr_spell-show" value="1" />
-		<textarea name="attr_spellbody" class="sheet-hide" placeholder="Spell Description"></textarea>
-	</fieldset>
+<div class="sheet-section-basicmoves">
+	<div class="sheet-basicmove">
+		<span name="attr_basicmovename"  class="sheet-basicmove-name">Scan the Environment</span>
+		<input type="checkbox" class="sheet-toggle" title="show/hide" name="attr_move-show" value="1" />
+		<div class="sheet-basicmove-description sheet-hide">
+			When you investigate the world around you, describe what sense, expertise, power, or skill you use to interact with your environment, and roll +Community. On a hit, your Guide will show you something about your world. On a 10+ you gain +1 Ongoing until the end of the scene when acting on the information you gain.
+		</div>
+	</div>
+	<div class="sheet-basicmove">
+		<span name="attr_basicmovename"  class="sheet-basicmove-name">Redirect the Current</span>
+		<input type="checkbox" class="sheet-toggle" title="show/hide" name="attr_move-show" value="1" />
+		<div class="sheet-basicmove-description sheet-hide">
+			When you act to remove an obstacle in your path, roll +Calm. On a hit you succeed at your task and avoid trouble. On a 7-9 the Guide will give you a hard choice, introduce an instability, or enact a cost.
+		</div>
+	</div>
+	<div class="sheet-basicmove">
+		<span name="attr_basicmovename"  class="sheet-basicmove-name">Reach Out</span>
+		<input type="checkbox" class="sheet-toggle" title="show/hide" name="attr_move-show" value="1" />
+		<div class="sheet-basicmove-description sheet-hide">
+			When you ask for help from nature or your community, roll +Hope. On a hit your pleas are heard. Describe how the natural world or members of your community come
+to your aid. On a 7-9 the Guide will describe how the help is temporary, unstable, or threatening
+		</div>
+	</div>
+	<div class="sheet-basicmove">
+		<span name="attr_basicmovename"  class="sheet-basicmove-name">Defend Another</span>
+		<input type="checkbox" class="sheet-toggle" title="show/hide" name="attr_move-show" value="1" />
+		<div class="sheet-basicmove-description sheet-hide">
+			When you risk your own safety to protect another, roll +Altruism. On a hit you protect your ward. On a 7-9, choose two from the following list:
+			<ul>
+				<li>You take the hit</li>
+				<li>You end up in a bad spot</li>
+				<li>You lash out at a friend</li>
+			</ul>
+			On a miss, choose two from the above list, and your ward remains unprotected
+		</div>
+	</div>
+	<div class="sheet-basicmove">
+		<span name="attr_basicmovename"  class="sheet-basicmove-name">Do Something Wondrous</span>
+		<input type="checkbox" class="sheet-toggle" title="show/hide" name="attr_move-show" value="1" />
+		<div class="sheet-basicmove-description sheet-hide">
+			When you use your gifts in a spectacular way, roll +Drive. On a hit, describe how you accomplished your goal. On a 7-9, choose one:
+			<ul>
+				<li>You suffer a backlash</li>
+				<li>You lose control at the worst time</li>
+				<li>You put others in danger</li>
+			</ul>
+		</div>
+	</div>
+	<div class="sheet-basicmove">
+		<span name="attr_basicmovename"  class="sheet-basicmove-name">Salve Wounds</span>
+		<input type="checkbox" class="sheet-toggle" title="show/hide" name="attr_move-show" value="1" />
+		<div class="sheet-basicmove-description sheet-hide">
+			When you tend to another’s suffering, ask that player (or the Guide if it’s an NPC) if they accept your help. If the answer is yes, roll +Hope. On a hit, you successfully render aid.
+			<br>If your target is a PC, they clear a Condition or hold 1 Maneuver.
+			<br>If you are tending an NPC, you help them as indicated by the narrative and clear a Condition or a Corruption.
+			<br>On a 10+, you also mark Harmony or hold 1 Maneuver.
+		</div>
+	</div>
 </div>
